...
    **********************************/
    
    // MARK: - Actions (Localizable)
    
    internal struct actionStrings {
        static var done = NSLocalizedString("Done", comment: "Button title.  Could you keep it short?")
        static var delete = NSLocalizedString("Delete", comment: "Button title.  Could you keep it short?")
        static var take = NSLocalizedString("Take", comment: "Notification action. Plenty of room.")
        static var save = NSLocalizedString("Save", comment: "Button title.  Room is fair.")
        static var undo = NSLocalizedString("undo", comment: "Button title.  Could you keep it short?")
        static var type = NSLocalizedString("Type", comment: "Button title.  Could you keep it short?")
        static var select = NSLocalizedString("Select", comment: "Button title.  Could you keep it short?")
        static var dismiss = NSLocalizedString("Dismiss", comment: "Button title.  Could you keep it short?")
...
    
    // MARK: - Titles (Localizable)
    
    internal struct titleStrings {
        static var pills = NSLocalizedString("Pills", comment: "Nav bar item left title.")
        static var site = NSLocalizedString("Site", comment: "Title for view controller.")
        static var sites = NSLocalizedString("Sites", comment: "Title of a view controller")
    }
    
    // MARK: - Placeholders (Localizable)
    
    internal struct placeholderStrings {
        static var nothing_yet = NSLocalizedString("Nothing yet", comment: "On buttons with plenty of room")
...
